--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "express": "^5.1.0",
     "mongoose": "^8.20.1",
     "multer": "^2.0.2",
+    "nodemailer": "^7.0.10",
     "svix": "^1.81.0"
   },
   "devDependencies": {
