--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
-    VITE_BACKEND_URL=https://hotel-booking-khi8.vercel.app
+    VITE_BACKEND_URL=https://hotel-booking-khi8.vercel.app/
 VITE_CLERK_PUBLISHABLE_KEY=pk_test_YWxlcnQtbWFybGluLTYuY2xlcmsuYWNjb3VudHMuZGV2JA
 VITE_CURRENCY=$
