--- a/server/.env
+++ b/server/.env
@@ -11,6 +11,6 @@ CLOUDINARY_CLOUD_NAME=dzskz7wdg
 CLOUDINARY_API_KEY=817675287548156
 CLOUDINARY_API_SECRET=czlZTgsMNTly20vycAvNegFd254
 
-FRONTEND_URLL=https://hotel-booking-khi8.vercel.app
+FRONTEND_URL=https://hotel-booking-khi8.vercel.app
 
 
