--- a/server/.env
+++ b/server/.env
@@ -11,6 +11,7 @@ CLOUDINARY_CLOUD_NAME=dzskz7wdg
 CLOUDINARY_API_KEY=817675287548156
 CLOUDINARY_API_SECRET=czlZTgsMNTly20vycAvNegFd254
 
-VITE_FRONTEND_URL=https://hotel-booking-khi8.vercel.app
+VITE_FRONTEND_URL=https://hotelbookingquickstay-tau.vercel.app
+
 
 
