--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
-    VITE_BACKEND_URL=https://hotelbookingquickstay-tau.vercel.app
-VITE_CLERK_PUBLISHABLE_KEY=pk_test_YWxlcnQtbWFybGluLTYuY2xlcmsuYWNjb3VudHMuZGV2JA
-VITE_CURRENCY=$
+        VITE_BACKEND_URL=https://booking-backend-lilac-iota.vercel.app/
+    VITE_CLERK_PUBLISHABLE_KEY=pk_test_YWxlcnQtbWFybGluLTYuY2xlcmsuYWNjb3VudHMuZGV2JA
+    VITE_CURRENCY=$
